fix(mobile): Unset max-width for topic list data on mobile
This allows the topic list data to fill the available width on mobile devices.

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -91,4 +91,8 @@
   .topic-card__thumbnail img {
     max-width: 100%;
   }
+
+  .topic-list-data {
+    max-width: unset;
+  }
 }
